--- a/型について.md
+++ b/型について.md
@@ -1,3 +1,17 @@
 # React.FC
 React.FCとは、constによる型定義でコンポーネントを定義できる型のこと。
 React.FunctionComponentの略。
+
+■使い方
+ジェネリクスでPropsの型を定義出来る。
+```tsx
+type Props = {
+    hoge: string;
+}
+
+const TestComponent: React.FC<Props> = ({ hoge }) => {
+    return (
+        <div>{hoge}</div>
+    )
+}
+```
