--- a/React/確認事項/20250623.md
+++ b/React/確認事項/20250623.md
@@ -1,1 +1,11 @@
-# tailwindのインストールパッケージに「autoprefixer」は含まれていたか。
+## 確認事項
+tailwindのインストールパッケージに「autoprefixer」は含まれているか。
+
+---
+## 対応内容
+・
+・.vscode/settings.jsonの見直し  
+　prettierrcで設定した内容を除外
+・.prettierrcの追加
+　・prettierignoreも合わせて追加
+
