--- a/React/メモ/20250623.md
+++ b/React/メモ/20250623.md
@@ -5,19 +5,19 @@
 
 ---
 
-## ESLint＞  
+# ESLint  
 「eslint.config.mjs」内の「next/core-web-vitals」でNext.js公式推奨のESLint設定が適用されている。  
 https://nextjs.org/docs/app/api-reference/config/eslint
 
-＜Prettier＞
+# Prettier  
 「.vscode/settings.json」で設定すると
 vscode以外のIDEで適用されなくなるため、適切ではない。
 
 
 --
-## 対応内容
-①「.prettierrc」を新規作成し、Pretteirの設定はでこちらで行う。
-②.vscode/settings.jsonでは、
-　prettierrcで設定している内容は除外する。
+# 対応
+①「.prettierrc」を新規作成し、Pretteirの設定はでこちらで行う。  
+②.vscode/settings.jsonでは、  
+　prettierrcで設定している内容は除外する。  
 ③prettierignore（Prettierの適用除外ファイル）も追加
 
