--- a/React/メモ/20250623.md
+++ b/React/メモ/20250623.md
@@ -13,11 +13,40 @@ https://nextjs.org/docs/app/api-reference/config/eslint
 「.vscode/settings.json」で設定すると
 vscode以外のIDEで適用されなくなるため、適切ではない。
 
+# Tailwind
+「postcss.config.mjs」が設定ファイル。
+Tailwind v4以降デフォルトでは設定は必要ない。
 
---
+
+---
 # 対応
 ①「.prettierrc」を新規作成し、Pretteirの設定はでこちらで行う。  
 ②.vscode/settings.jsonでは、  
 　prettierrcで設定している内容は除外する。  
 ③prettierignore（Prettierの適用除外ファイル）も追加
-
+  
+④tailwindにpretteirを適用させるには以下を「.prettierrc」に設定
+```ts
+"plugins": ["prettier-plugin-tailwindcss"]
+```
+  
+⑤ESLintとPretteirの設定が競合しないように以下を設定  
+・「eslint-config-prettier」をインストール  
+・eslint.config.mjsに以下'prettier'を追記
+```ts
+const eslintConfig = [
+  ...compat.config({
+    extends: ['next/core-web-vitals', 'next/typescript', 'prettier'],
+  }),
+]
+```
+※補足  
+'next'は設定不要。  
+'next/core-web-vitals'は
+'next'よりもさらに厳しめのWeb Vitals関連ルールを追加したセット。
+nextの内容をすべて含みつつ、追加ルールを加えたものであるため。  
+  
+---
+# 気になる点  
+「.globals.css」にデフォルトで記載されていた内容は
+残す必要あるか？    
